--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@ https://templatemo.com/tm-531-reflux
           <div class="col-md-6">
             <div class="service-item">
               <div class="fourth-service-icon service-icon"></div>
-              <h4>Drug Discovery and Development</h4>
+              <h4>Biologics Development</h4>
               <p>
-                Experience in leading/developing therapeutic monoclonal antibody discovery and development, biomarker
+                Experience in leading therapeutic monoclonal antibody discovery and development, biomarker
                 discovery, cell-based assay
                 development, clinical phase cell manufacturing quality control, GMP environment, high-throughput drug
                 screening, and CRO/CMO management of immunotherapy and cell therapy.
@@ -216,8 +216,9 @@ https://templatemo.com/tm-531-reflux
               <h4>Data Science</h4>
               <p>
                 Experienced in analysis and data management of large volume complex datasets or images using Python and
-                R programming, machine learning algorithms, computer vision with CNN and transfer learning, cloud
-                computation, parallel computation with the MapReduce programming paradigm, and data visualization.
+                R programming, machine learning algorithms, convolutional neural network with Tensorflow, cloud
+                computation, parallel computation with the MapReduce programming paradigm and Spark, and data
+                visualization.
               </p>
             </div>
           </div>
