--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ https://templatemo.com/tm-531-reflux
               <p>
                 Experienced in analysis and data management of large volume complex datasets or images using Python and
                 R programming, machine learning algorithms, convolutional neural network with Tensorflow, cloud
-                computation, parallel computation with the MapReduce programming paradigm and Spark, and data
+                computation, parallel computation with the MapReduce paradigm and Spark, and data
                 visualization.
               </p>
             </div>
