--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@ https://templatemo.com/tm-531-reflux
                   <ul><strong>B.S. in Chemistry</strong>, National Cheng Kung University</ul>
                 </p>
                 <div class="white-button">
-                  <a href="#">Read More</a>
+                  <a href="https://github.com/linchunjen/linchunjen.github.io/blob/master/Resume_Curtis_Lin_2020.pdf">Read
+                    More</a>
                 </div>
               </div>
             </div>
