--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-531-reflux
               <div class="right-text">
                 <h3><i class="fa fa-compass" aria-hidden="true"></i>Experiences</h3>
                 <p>
-                  <h5><strong>Biomarker discovery</strong></h5>
+                  <h5><strong>Biomarker Discovery</strong></h5>
                   <li>Co-develop biomarkers to access likelihood of responses of cancer immunotherapy by
                     analyzing the expression of genes associated with replication stress response<a
                       href="https://patentscope.wipo.int/search/en/detail.jsf?docId=WO2019173456"><i
