--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-531-reflux
               <div class="right-text">
                 <h3><i class="fa fa-compass" aria-hidden="true"></i>Experiences</h3>
                 <p>
-                  <h5><strong>Biomarker Discovery</strong></h5>
+                  <h5><strong>Data-driven Translational Research</strong></h5>
                   <li>Co-develop biomarkers to access likelihood of responses of cancer immunotherapy by
                     analyzing the expression of genes associated with replication stress response<a
                       href="https://patentscope.wipo.int/search/en/detail.jsf?docId=WO2019173456"><i
@@ -99,6 +99,11 @@ https://templatemo.com/tm-531-reflux
                   <li>Co-develop algorithm that generates robust multigene expression signatures for guiding the use
                     of specific therapies<a href="https://www.nature.com/articles/s41540-017-0011-6"><i
                         class="fa fa-link">Publication link</i></a>
+                  </li>
+                  <li>Identify novel drugs and compounds for the combination therapy using gene signature-based
+                    approached with clinical patient data<a
+                      href="https://github.com/linchunjen/Gene-signature-based-compound-identification"><i
+                        class="fa fa-link">Github link</i></a>
                   </li>
                   <br>
 
