--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ https://templatemo.com/tm-531-reflux
         <div class="section-heading">
           <h2>About Me</h2>
           <div class="line-dec"></div>
-          <span>A biologist is aiming to improve precision medicine and facilitate the process of drug discovery and
+          <span>A Biologist/Data Scientist is aiming to improve precision medicine and facilitate the process of drug
+            discovery and
             development with Systems Biology and Data Science approaches. </span>
         </div>
         <div class="left-image-post">
