--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ https://templatemo.com/tm-531-reflux
               <h2>Contact Me</h2>
               <div class="line-dec"></div>
               <form id="contact" action="mailto:curtiscjlin@outlook.com" method="post">
-                <!-- <div class="row">
+                <div class="row">
                   <div class="col-md-6">
                     <fieldset>
                       <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
@@ -479,21 +479,21 @@ https://templatemo.com/tm-531-reflux
                       <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..."
                         required=""></textarea>
                     </fieldset>
-                  </div> -->
-                <div class="col-md-12">
-                  <fieldset>
-                    <button type="submit" id="form-submit" class="button">
-                      Send Email
-                    </button>
-                  </fieldset>
+                  </div>
+                  <div class="col-md-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">
+                        Send Email
+                      </button>
+                    </fieldset>
+                  </div>
                 </div>
+              </form>
             </div>
-            </form>
           </div>
         </div>
       </div>
-  </div>
-  </section>
+    </section>
   </div>
 
   <!-- Scripts -->
