--- a/index.html
+++ b/index.html
@@ -442,18 +442,18 @@ https://templatemo.com/tm-531-reflux
     </section>
 
     <section class="section contact-me" data-section="section4">
-      <!-- <div class="container">
+      <div class="container">
         <div class="section-heading">
           <h2>Contact Me</h2>
           <div class="line-dec"></div>
-          <span>.</span>
-        </div> -->
-      <div class="row">
-        <div class="rigth-content">
-          <div class="container">
-            <div class="section-heading">
+          <!-- <span>.</span> -->
+        </div>
+        <div class="row">
+          <div class="rigth-content">
+            <div class="container">
+              <!-- <div class="section-heading">
               <h2>Contact Me</h2>
-              <div class="line-dec"></div>
+              <div class="line-dec"></div> -->
               <form id="contact" action="mailto:curtiscjlin@outlook.com" method="post">
                 <div class="row">
                   <div class="col-md-6">
