--- a/index.html
+++ b/index.html
@@ -443,56 +443,56 @@ https://templatemo.com/tm-531-reflux
 
     <section class="section contact-me" data-section="section4">
       <div class="container">
-        <div class="section-heading">
+        <!-- <div class="section-heading">
           <h2>Contact Me</h2>
           <div class="line-dec"></div>
-          <!-- <span>.</span> -->
-        </div>
+          <span>.</span>
+        </div> -->
         <div class="row">
           <div class="rigth-content">
             <div class="container">
-              <!-- <div class="section-heading">
-              <h2>Contact Me</h2>
-              <div class="line-dec"></div> -->
-              <form id="contact" action="mailto:curtiscjlin@outlook.com" method="post">
-                <div class="row">
-                  <div class="col-md-6">
-                    <fieldset>
-                      <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
-                        required="" />
-                    </fieldset>
+              <div class="section-heading">
+                <h2>Contact Me</h2>
+                <div class="line-dec"></div>
+                <form id="contact" action="mailto:curtiscjlin@outlook.com" method="post">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <fieldset>
+                        <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
+                          required="" />
+                      </fieldset>
+                    </div>
+                    <div class="col-md-6">
+                      <fieldset>
+                        <input name="email" type="text" class="form-control" id="email" placeholder="Your email..."
+                          required="" />
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..."
+                          required="" />
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <textarea name="message" rows="6" class="form-control" id="message"
+                          placeholder="Your message..." required=""></textarea>
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <button type="submit" id="form-submit" class="button">
+                          Send Email
+                        </button>
+                      </fieldset>
+                    </div>
                   </div>
-                  <div class="col-md-6">
-                    <fieldset>
-                      <input name="email" type="text" class="form-control" id="email" placeholder="Your email..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..."
-                        required=""></textarea>
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="button">
-                        Send Email
-                      </button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
+                </form>
+              </div>
             </div>
           </div>
         </div>
-      </div>
     </section>
   </div>
 
