--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-531-reflux
               <li><a href="#section1">About Me</a></li>
               <li><a href="#section2">Skills</a></li>
               <li><a href="#section3">Projects</a></li>
-              <li><a href="#section4">Contact Me</a></li>
+              <!-- <li><a href="#section4">Contact Me</a></li> -->
             </ul>
           </nav>
           <div class="social-network">
@@ -441,14 +441,14 @@ https://templatemo.com/tm-531-reflux
       </div>
     </section>
 
-    <section class="section contact-me" data-section="section4">
-      <div class="container">
-        <!-- <div class="section-heading">
+    <!-- <section class="section contact-me" data-section="section4">
+      <div class="container"> -->
+    <!-- <div class="section-heading">
           <h2>Contact Me</h2>
           <div class="line-dec"></div>
           <span>.</span>
         </div> -->
-        <div class="row">
+    <!-- <div class="row">
           <div class="rigth-content">
             <div class="container">
               <div class="section-heading">
@@ -493,7 +493,7 @@ https://templatemo.com/tm-531-reflux
             </div>
           </div>
         </div>
-    </section>
+    </section> -->
   </div>
 
   <!-- Scripts -->
