--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-531-reflux
               <li><a href="#section1">About Me</a></li>
               <li><a href="#section2">Skills</a></li>
               <li><a href="#section3">Projects</a></li>
-              <!-- <li><a href="#section4">Contact Me</a></li> -->
+              <li><a href="#section4">Contact Me</a></li>
             </ul>
           </nav>
           <div class="social-network">
@@ -441,14 +441,16 @@ https://templatemo.com/tm-531-reflux
       </div>
     </section>
 
-    <!-- <section class="section contact-me" data-section="section4">
-      <div class="container"> -->
-    <!-- <div class="section-heading">
+    <section class="section contact-me" data-section="section4">
+      <div class="container">
+        <div class="section-heading">
           <h2>Contact Me</h2>
           <div class="line-dec"></div>
-          <span>.</span>
-        </div> -->
-    <!-- <div class="row">
+          <span>
+            <h4>Email: curtiscjlin@outlook.com</h4>
+          </span>
+        </div>
+        <!-- <div class="row">
           <div class="rigth-content">
             <div class="container">
               <div class="section-heading">
@@ -494,66 +496,66 @@ https://templatemo.com/tm-531-reflux
           </div>
         </div>
     </section> -->
-  </div>
+      </div>
 
-  <!-- Scripts -->
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <!-- Scripts -->
+      <!-- Bootstrap core JavaScript -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/lightbox.js"></script>
-  <script src="assets/js/custom.js"></script>
-  <script>
-    //according to loftblog tut
-    $(".main-menu li:first").addClass("active");
+      <script src="assets/js/isotope.min.js"></script>
+      <script src="assets/js/owl-carousel.js"></script>
+      <script src="assets/js/lightbox.js"></script>
+      <script src="assets/js/custom.js"></script>
+      <script>
+        //according to loftblog tut
+        $(".main-menu li:first").addClass("active");
 
-    var showSection = function showSection(section, isAnimate) {
-      var direction = section.replace(/#/, ""),
-        reqSection = $(".section").filter(
-          '[data-section="' + direction + '"]'
-        ),
-        reqSectionPos = reqSection.offset().top - 0;
+        var showSection = function showSection(section, isAnimate) {
+          var direction = section.replace(/#/, ""),
+            reqSection = $(".section").filter(
+              '[data-section="' + direction + '"]'
+            ),
+            reqSectionPos = reqSection.offset().top - 0;
 
-      if (isAnimate) {
-        $("body, html").animate({
-            scrollTop: reqSectionPos
-          },
-          800
-        );
-      } else {
-        $("body, html").scrollTop(reqSectionPos);
-      }
-    };
+          if (isAnimate) {
+            $("body, html").animate({
+                scrollTop: reqSectionPos
+              },
+              800
+            );
+          } else {
+            $("body, html").scrollTop(reqSectionPos);
+          }
+        };
 
-    var checkSection = function checkSection() {
-      $(".section").each(function () {
-        var $this = $(this),
-          topEdge = $this.offset().top - 80,
-          bottomEdge = topEdge + $this.height(),
-          wScroll = $(window).scrollTop();
-        if (topEdge < wScroll && bottomEdge > wScroll) {
-          var currentId = $this.data("section"),
-            reqLink = $("a").filter("[href*=\\#" + currentId + "]");
-          reqLink
-            .closest("li")
-            .addClass("active")
-            .siblings()
-            .removeClass("active");
-        }
-      });
-    };
+        var checkSection = function checkSection() {
+          $(".section").each(function () {
+            var $this = $(this),
+              topEdge = $this.offset().top - 80,
+              bottomEdge = topEdge + $this.height(),
+              wScroll = $(window).scrollTop();
+            if (topEdge < wScroll && bottomEdge > wScroll) {
+              var currentId = $this.data("section"),
+                reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+              reqLink
+                .closest("li")
+                .addClass("active")
+                .siblings()
+                .removeClass("active");
+            }
+          });
+        };
 
-    $(".main-menu").on("click", "a", function (e) {
-      e.preventDefault();
-      showSection($(this).attr("href"), true);
-    });
+        $(".main-menu").on("click", "a", function (e) {
+          e.preventDefault();
+          showSection($(this).attr("href"), true);
+        });
 
-    $(window).scroll(function () {
-      checkSection();
-    });
-  </script>
+        $(window).scroll(function () {
+          checkSection();
+        });
+      </script>
 </body>
 
 </html>
