--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@ https://templatemo.com/tm-531-reflux
                       href="https://www.biospace.com/article/biosuperior-anti-cd47-therapeutic-antibody-avi-105-/"><i
                         class="fa fa-link">News link</i></a>
                   </li>
+                  <li>Designed bi-specific antibodies and led preclinical development with characterization, immune
+                    cell-based assay development, and in vivo efficacy and toxicology studies <a
+                      href="https://github.com/linchunjen/linchunjen.github.io/blob/master/AVI-525B_AVI-535B.pdf"><i
+                        class="fa fa-link">News link</i></a>
+                  </li>
                   <br>
 
 
